# croh

./: .gitignore  CLAUDE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  croc-gui-v2-plan.md  tmpclaude-d690-cwd
.github/workflows/: ci.yml
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  files.rs  lib.rs  networks.rs  peers.rs  platform.rs  transfer.rs  transfer_history.rs  trust.rs
crates/core/src/chat/: handler.rs  mod.rs  store.rs  types.rs
crates/core/src/croc/: executable.rs  mod.rs  options.rs  output.rs  process.rs
crates/core/src/iroh/: address.rs  blobs.rs  browse.rs  endpoint.rs  handshake.rs  identity.rs  mod.rs  protocol.rs  speedtest.rs  test_support.rs  transfer.rs
crates/core/src/screen/: adaptive.rs  cursor.rs  decoder.rs  drm.rs  dxgi.rs  encoder.rs  events.rs  input.rs  manager.rs  mod.rs  portal.rs  session.rs  time_sync.rs  token_manager.rs  types.rs  uinput.rs  viewer.rs  wayland.rs  windows_input.rs  x11.rs
crates/core/src/screen/ffmpeg/: decoder.rs  encoder.rs  hwaccel.rs  mod.rs  scaler.rs
crates/core/tests/: iroh_integration.rs
crates/core/tests/common/: mod.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: main.rs
crates/daemon/src/commands/: config.rs  mod.rs  peers.rs  receive.rs  run.rs  status.rs
crates/daemon/src/handlers/: mod.rs  screen.rs
crates/gui/: Cargo.toml  build.rs
crates/gui/src/: app.rs  main.rs  ui_update.rs
crates/gui/ui/: main.slint
docs/: IROH_INTEGRATION_NOTES.md  deadcode-and-todos-analysis.md  ffmpeg-encoding-feature.md  screen-streaming-improvements.md
docs/architecture/: screen-streaming-phase1-3.md  screen-streaming-phase4-wayland.md
docs/design/: portal-capture-plan.md  screen-streaming-phases.md  screen-streaming.md
install/linux/: croc-gui.service  croh.service  install.sh  uninstall.sh
install/windows/: install.ps1  uninstall.ps1
scripts/: dual-test.ps1  dual-test.sh
