[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/gui",
    "crates/daemon",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Croh Contributors"]
repository = "https://github.com/croh/croh"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Iroh networking for trusted peers
iroh = "0.35"
iroh-blobs = "0.35"

# Hashing
blake3 = "1.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UI Framework
slint = "1.9"

# File dialogs
rfd = "0.17"

# UUID generation
uuid = { version = "1.11", features = ["v4"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Regex for parsing
regex = "1.11"

# Cross-platform directories
dirs = "5.0"

# Clipboard
arboard = "3.4"

# Internal crates
croh-core = { path = "crates/core" }

