[package]
name = "croh-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for Croh - shared functionality for croc wrapper and transfer management"

[features]
default = []
# Enable local relay server for comprehensive integration testing
test-relay = ["iroh/test-utils"]

[dependencies]
# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# UUID generation
uuid = { workspace = true }

# Date/time
chrono = { workspace = true }

# Regex for parsing croc output
regex = { workspace = true }

# Cross-platform directories
dirs = { workspace = true }

# Iroh networking for trusted peers
iroh = { workspace = true }
iroh-blobs = { workspace = true }

# Hashing for file verification
blake3 = { workspace = true }

# Random for nonce generation
rand = "0.8"

# Hex encoding for keys
hex = "0.4"

# Hostname detection
hostname = "0.4"

[dev-dependencies]
tempfile = "3.14"
tokio-test = "0.4"
tracing-subscriber = { workspace = true }

