[package]
name = "croh-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for Croh - shared functionality for croc wrapper and transfer management"

[features]
default = []
# Enable local relay server for comprehensive integration testing
test-relay = ["iroh/test-utils"]

[dependencies]
# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# UUID generation
uuid = { workspace = true }

# Date/time
chrono = { workspace = true }

# Regex for parsing croc output
regex = { workspace = true }

# Cross-platform directories
dirs = { workspace = true }

# Iroh networking for trusted peers
iroh = { workspace = true }
iroh-blobs = { workspace = true }

# Hashing for file verification
blake3 = { workspace = true }

# Random for nonce generation
rand = "0.8"

# Hex encoding for keys
hex = "0.4"

# Base64 encoding for speed test data
base64 = "0.22"

# Embedded database for chat storage
sled = "0.34"

# Hostname detection
hostname = "0.4"

# Platform-specific disk space queries
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.14"
tokio-test = "0.4"
tracing-subscriber = { workspace = true }

