[package]
name = "croh-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for Croh - shared functionality for croc wrapper and transfer management"

[features]
default = []
# Enable local relay server for comprehensive integration testing
test-relay = ["iroh/test-utils"]
# Enable FFmpeg-based video encoding (H.264, etc.) with hardware acceleration
ffmpeg = ["dep:ffmpeg-the-third"]

[dependencies]
# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# UUID generation
uuid = { workspace = true }

# Date/time
chrono = { workspace = true }

# Regex for parsing croc output
regex = { workspace = true }

# Cross-platform directories
dirs = { workspace = true }

# Iroh networking for trusted peers
iroh = { workspace = true }
iroh-blobs = { workspace = true }

# Hashing for file verification
blake3 = { workspace = true }

# Random for nonce generation
rand = "0.8"

# Hex encoding for keys
hex = "0.4"

# Base64 encoding for speed test data
base64 = "0.22"

# Embedded database for chat storage
sled = "0.34"

# Hostname detection
hostname = "0.4"

# Async traits
async-trait = "0.1"

# Frame encoding
png = "0.17"
zstd = "0.13"

# Video encoding via FFmpeg (optional, for hardware acceleration)
ffmpeg-the-third = { version = "4.0", optional = true, default-features = false, features = [
    "codec",
    "format",
    "software-scaling",
] }

# Platform-specific disk space queries
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Linux screen capture dependencies
[target.'cfg(target_os = "linux")'.dependencies]
# DRM/KMS for direct framebuffer access (requires CAP_SYS_ADMIN)
drm = "0.14"
drm-ffi = "0.9"
# X11 SHM for X11 session capture
x11rb = { version = "0.13", features = ["shm", "randr"] }
# XDG Desktop Portal for Wayland screen capture (works on KDE, GNOME)
# tokio feature is enabled by default in 0.12+
ashpd = "0.12"
# PipeWire bindings for receiving portal video streams
pipewire = "0.9"

# Windows screen capture dependencies
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D",
    "Win32_Foundation",
    "Win32_Security",
] }

[dev-dependencies]
tempfile = "3.14"
tokio-test = "0.4"
tracing-subscriber = { workspace = true }

