[package]
name = "croh-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Headless daemon for croc file transfer - accepts incoming transfers and manages trusted peers"

[dependencies]
# Core library
croh-core = { workspace = true }

# Async runtime
tokio = { workspace = true }

# CLI parsing
clap = { version = "4.5", features = ["derive"] }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

